# CppExample

./: .travis.yml  Animal.h  CMakeLists.txt  NormalAnimals.cpp  NormalAnimals.h  TestAnimals.cpp  TestAnimals.h  animal.cpp  main.cpp
